# Vulcain

./: .gitmodules  CMakeLists.txt  README.md
shaders/: CMakeLists.txt
src/: Vulcain.cpp  main.cpp
src/engine/: Buffer.hpp  CMakeLists.txt  CommandPool.hpp  CreateInfo.hpp  Debug.hpp  DescriptorPool.hpp  DescriptorPools.hpp  Device.hpp  DeviceDetails.hpp  DevicePicker.hpp  GlfwWindow.cpp  GlfwWindow.h  GlfwWindow.hpp  IBuffer.hpp  IDrawer.h  IRegenerable.cpp  IRegenerable.hpp  ImageViews.hpp  Instance.hpp  InstanceCreateInfo.hpp  Pipeline.hpp  PipelineBuilder.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Renderpass.hpp  ShaderFoundry.hpp  Shaders.hpp  StaticBuffer.hpp  Surface.hpp  Swapchain.hpp  UniformBuffers.hpp  Vulcain.h  WindowHandler.hpp
src/engine/buffers/: IBuffer.hpp  StaticBuffer.hpp  UBO.hpp  UniformBuffers.hpp  Vertex.hpp
src/engine/common/: Debug.hpp  IDrawer.h  IRegenerable.cpp  IRegenerable.h  Vulcain.h
src/engine/helpers/: DeviceDetails.hpp  DevicePicker.hpp  InstanceCreateInfo.hpp  PipelineBuilder.hpp  PipelineFactory.hpp  ShaderFoundry.hpp
src/engine/toys/: UBO.hpp
src/example/: CMakeLists.txt  main.cpp
src/generator/: Args.hpp  CMakeLists.txt  Output.hpp  Reflecteur.cpp  Reflector.hpp  main.cpp
src/generator/include/: IDescriptorSetGenerator.h
src/generator/reflection/: IFiller.hpp  UniformBuffers.hpp
src/shaders/: CMakeLists.txt
src/window/: WindowHandler.hpp
toolchains/: msys2.cmake
